style: Fix flex wrap for Companies section

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ body {
   font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
-  overflow-x: hidden;
   position: relative;
   margin: 0 auto;
 }
@@ -27,7 +26,6 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-  overflow-x: hidden;
 }
 
 .main::before {
